Adaptando swagger al inglés
